crm plugin build up.. swagger doc modifications
